Prefer use of Integer.valueOf instead of new Integer()